--- a/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
     <div class="wrapper__accordion-group">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
+        <div class="wrapper__accordion">
             <input type="checkbox" (click)="addToFilter($event)">
-            Nhiếp ảnh
-            <i class="wrapper__accordion__dropdown-level2-body fa-solid fa-chevron-down"></i>
+            <span class="hover-effect-yellow-bright">Nhiếp ảnh</span>
+            <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
         </div>
         <div class="wrapper__panel">
             <div class="wrapper__panel__wrapper__level3-item">
@@ -91,10 +91,10 @@
 
     <div class="wrapper__accordion-group-special">
         <div class="wrapper__accordion-group-special__classify-group">
-            <div class="hover-effect-yellow-bright wrapper__accordion-group-special__classify-group__accordion">
+            <div class="wrapper__accordion-group-special__classify-group__accordion">
                 <input type="checkbox" (click)="addToFilter($event)">
-                Hội họa
-                <i class="fa-solid fa-chevron-down"></i>
+                <span class="hover-effect-yellow-bright">Hội họa</span>
+                <i class="hover-effect-yellow-bright wrapper__accordion__icon__special fa-solid fa-chevron-down"></i>
             </div>
 
             <div class="wrapper__accordion-group-special__classify-group__panel">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="wrapper__accordion-group-special__classify-group__panel__slash-group">
+                <div class="hover-effect-silver-border wrapper__accordion-group-special__classify-group__panel__slash-group">
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__slash"></span>
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__text">
                         Theo trường phái
@@ -157,17 +157,17 @@
 
     <div class="wrapper__accordion-group-special">
         <div class="wrapper__accordion-group-special__classify-group">
-            <div class="hover-effect-yellow-bright wrapper__accordion-group-special__classify-group__accordion">
+            <div class="wrapper__accordion-group-special__classify-group__accordion">
                 <input type="checkbox" (click)="addToFilter($event)">
-                Dựa trên tác giả
-                <i class="fa-solid fa-chevron-down"></i>
+                <span class="hover-effect-yellow-bright">Cảm hứng tác giả</span>
+                <i class="hover-effect-yellow-bright wrapper__accordion__icon__special fa-solid fa-chevron-down"></i>
             </div>
 
             <div class="wrapper__accordion-group-special__classify-group__panel">
-                <div class="wrapper__accordion-group-special__classify-group__panel__slash-group">
+                <div class="hover-effect-silver-border wrapper__accordion-group-special__classify-group__panel__slash-group">
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__slash"></span>
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__text">
-                        Việt Nam
+                        Theo chất liệu
                     </span>
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__slash"></span>
                 </div>
@@ -177,24 +177,24 @@
                         <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680" alt=""
                             class="wrapper__accordion-group-special__classify-group__panel__level3-group__item__image">
                         <p class="hover-effect-yellow-bright wrapper__accordion-group-special__classify-group__panel__level3-group__item__overlay">
-                            Nguyễn Gia Trí
                             <input type="checkbox">
+                            Nguyễn Gia Trí
                         </p>
                     </div>
                     <div class="wrapper__accordion-group-special__classify-group__panel__level3-group__item">
                         <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680" alt=""
                             class="wrapper__accordion-group-special__classify-group__panel__level3-group__item__image">
                         <p class="hover-effect-yellow-bright wrapper__accordion-group-special__classify-group__panel__level3-group__item__overlay">
-                            Nguyễn Gia Trí
                             <input type="checkbox">
+                            Nguyễn Gia Trí
                         </p>
                     </div>
                 </div>
 
-                <div class="wrapper__accordion-group-special__classify-group__panel__slash-group">
+                <div class="hover-effect-silver-border wrapper__accordion-group-special__classify-group__panel__slash-group">
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__slash"></span>
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__text">
-                        Thế giới
+                        Theo trường phái
                     </span>
                     <span class="wrapper__accordion-group-special__classify-group__panel__slash-group__slash"></span>
                 </div>
