--- a/fe/src/styles.css
+++ b/fe/src/styles.css
@@ -5,3 +5,4 @@
 @import url("assets/css/button.css");
 @import url("assets/css/animations.css");
 @import url("assets/css/input.css");
+@import url("app/shareds/main-shared/components/toast/toast.component.css");
