--- a/fe/src/app/auth/components/login-modal/login-modal.component.css
+++ b/fe/src/app/auth/components/login-modal/login-modal.component.css
@@ -38,6 +38,7 @@
     height: 100%;
     border-right: 1px solid var(--dark-border-color);
     background: #15151552;
+    -webkit-backdrop-filter: blur(6px);
     backdrop-filter: blur(6px);
     display: flex;
     justify-content: center;
@@ -110,6 +111,7 @@
     justify-content: center;
     align-items: baseline;
     gap: 3px;
+    -webkit-user-select: none;
     user-select: none;
 }
 
