--- a/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.css
@@ -38,14 +38,24 @@
     color: var(--dark-text-color);
     width: 100%;
     border: 1px solid var(--dark-level2-border-color);
-    transition: 0.4s;
     padding: 15px 18px;
-    padding-bottom: 14.1px;
+    padding-bottom: 12.9px;
     height: 66px;
+}
+
+.wrapper__accordion span {
+    flex: 1;
+    padding: 21px 0;
 }
 
 .wrapper__accordion i {
     transition: 0.21s ease-in-out;
+    border: 1px solid var(--dark-level2-border-color);
+    border-radius: var(--border-radius-1);
+    padding: 6px;
+    position: absolute;
+    top: 30px;
+    right: 23px;
 }
 
 .wrapper__accordion.toggle {
@@ -123,6 +133,11 @@
     width: 100%;
 }
 
+.wrapper__accordion-group-special:last-child {
+    position: relative;
+    z-index: 9;
+}
+
 .wrapper__accordion-group-special__classify-group {
     width: 100%;
     display: flex;
@@ -140,8 +155,23 @@
     border: 1px solid var(--dark-level2-border-color);
     transition: 0.21s ease-in-out; 
     padding: 15px 18px;
-    padding-bottom: 14.1px;
+    padding-bottom: 12.9px;
     height: 66px;
+    position: relative;
+}
+
+.wrapper__accordion-group-special__classify-group__accordion span {
+    flex: 1;
+    padding: 21px 0;
+}
+
+.wrapper__accordion-group-special__classify-group__accordion i {
+    transition: 0.21s ease-in-out;
+    border: 1px solid var(--dark-level2-border-color);
+    border-radius: var(--border-radius-1);
+    padding: 6px;
+    position: absolute;
+    right: 10px;
 }
 
 .wrapper__accordion-group-special__classify-group__accordion.toggle {
