--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.css
@@ -34,14 +34,25 @@
     color: var(--dark-text-color);
     width: 100%;
     border: 1px solid var(--dark-level2-border-color);
-    transition: 0.4s;
     padding: 15px 18px;
-    padding-bottom: 13.2px;
+    padding-bottom: 12.9px;
     height: 66px;
+    position: relative;
+}
+
+.wrapper__accordion span {
+    flex: 1;
+    padding: 21px 0;
 }
 
 .wrapper__accordion i {
     transition: 0.21s ease-in-out;
+    border: 1px solid var(--dark-level2-border-color);
+    border-radius: var(--border-radius-1);
+    padding: 6px;
+    position: absolute;
+    top: 16px;
+    right: 10px;
 }
 
 .wrapper__accordion.toggle {
