--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
@@ -1,9 +1,10 @@
 <div class="wrapper">
     <div class="wrapper__accordion-group">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Con người
-            <i class="wrapper__accordion__dropdown-level2-body fa-solid fa-chevron-down"></i>
+        <div class="wrapper__accordion">
+            <input type="checkbox" [checked]="isCategoryTagSelected({ id: 1, name: 'Con người' })" 
+            (click)="toggleToFilter($event, { id: 1, name: 'Con người' })">
+            <span (click)="addToPreview({ id: 1, name: 'Con người' })" class="hover-effect-yellow-bright">Con người</span>
+            <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
         </div>
         <div class="wrapper__panel">
             <div class="wrapper__panel__wrapper">
@@ -39,23 +40,27 @@
         </div>
     </div>
     <div class="wrapper__accordion-group">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Con người
-            <i class="wrapper__accordion__dropdown-level2-body fa-solid fa-chevron-down"></i>
+        <div class="wrapper__accordion">
+            <input type="checkbox" [checked]="isCategoryTagSelected({ id: 2, name: 'Phong cảnh' })"
+            (click)="toggleToFilter($event, { id: 2, name: 'Phong cảnh' })">
+            <span (click)="addToPreview({ id: 2, name: 'Phong cảnh' })" class="hover-effect-yellow-bright">Phong cảnh</span>
+            <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
         </div>
         <div class="wrapper__panel">
             <div class="wrapper__panel__wrapper">
                 <div class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                    <input type="checkbox">
+                    <input [checked]="isCategoryTagSelected({ id: 4, name: 'Cá nhân' })"
+                    (click)="toggleToFilter($event, { id: 4, name: 'Cá nhân' })" type="checkbox">
                     <span class="wrapper__panel__wrapper__tag-filter__content">Cá nhân</span>
                 </div>
                 <div class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                    <input type="checkbox">
+                    <input [checked]="isCategoryTagSelected({ id: 5, name: 'Cặp đôi' })"
+                    (click)="toggleToFilter($event, { id: 5, name: 'Cặp đôi' })" type="checkbox">
                     <span class="wrapper__panel__wrapper__tag-filter__content">Cặp đôi</span>
                 </div>
                 <div class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                    <input type="checkbox">
+                    <input [checked]="isCategoryTagSelected({ id: 6, name: 'Châu Phi' })"
+                    (click)="toggleToFilter($event, { id: 6, name: 'Châu Phi' })" type="checkbox">
                     <span class="wrapper__panel__wrapper__tag-filter__content">Châu Phi</span>
                 </div>
                 <div class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
@@ -78,10 +83,11 @@
         </div>
     </div>
     <div class="wrapper__accordion-group">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Con người
-            <i class="wrapper__accordion__dropdown-level2-body fa-solid fa-chevron-down"></i>
+        <div class="wrapper__accordion">
+            <input type="checkbox" [checked]="isCategoryTagSelected({ id: 3, name: 'Động vật' })"
+            (click)="toggleToFilter($event, { id: 3, name: 'Động vật' })">
+            <span (click)="addToPreview({ id: 3, name: 'Động vật' })" class="hover-effect-yellow-bright">Động vật</span>
+            <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
         </div>
         <div class="wrapper__panel">
             <div class="wrapper__panel__wrapper">
