--- a/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.html
@@ -20,6 +20,30 @@
             alt="religion-picture" class="wrapper__accordion-group__img">
         <div class="hover-effect-yellow-bright wrapper__accordion">
             <input type="checkbox" (click)="addToFilter($event)">
+            Phong Thủy
+        </div>
+    </div>
+    <div class="wrapper__accordion-group">
+        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
+            alt="religion-picture" class="wrapper__accordion-group__img">
+        <div class="hover-effect-yellow-bright wrapper__accordion">
+            <input type="checkbox" (click)="addToFilter($event)">
+            Phong Thủy
+        </div>
+    </div>
+    <div class="wrapper__accordion-group">
+        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
+            alt="religion-picture" class="wrapper__accordion-group__img">
+        <div class="hover-effect-yellow-bright wrapper__accordion">
+            <input type="checkbox" (click)="addToFilter($event)">
+            Phong Thủy
+        </div>
+    </div>
+    <div class="wrapper__accordion-group">
+        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
+            alt="religion-picture" class="wrapper__accordion-group__img">
+        <div class="hover-effect-yellow-bright wrapper__accordion">
+            <input type="checkbox" (click)="addToFilter($event)">
             Dân gian Đông Hồ
         </div>
     </div>
