--- a/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.html
@@ -108,122 +108,9 @@
                 <div class="right-side__inside__body__gallery__exhibition__item">
                     <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
                     class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
-                </div>
-                <div class="right-side__inside__body__gallery__exhibition__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt=""
-                    class="right-side__inside__body__gallery__exhibition__item__img">
+                    <div (click)="togglePreviewModal()" class="hover-effect-yellow-bright right-side__inside__body__gallery__exhibition__preview">
+                        Xem trước
+                    </div>
                 </div>
             </div>
 
@@ -251,3 +138,28 @@
         </div>
     </aside>
 </div>
+
+<app-modal (notifyToggleModal)="togglePreviewModal()" *ngIf="isPreviewModalShow" style="display: contents;" >
+    <div class="preview-drawing-container">
+        <h1 class="preview-drawing-container__title">
+            Con mèo mà trèo cây cau
+        </h1>
+        <figure class="preview-drawing-container__img-group">
+            <img class="preview-drawing-container__img-group__img"
+                src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
+                alt="">
+        </figure>
+        <div class="preview-drawing-container__button-group">
+            <button class="hover-effect-yellow-bright btn outline">
+                <i class="fa-solid fa-cart-shopping"></i> <span>Thêm vào giỏ hàng</span>
+            </button>
+            <button class="hover-effect-yellow-bright btn outline">
+                <span>Xem chi tiết</span>
+            </button>
+            <button (click)="togglePreviewModal()" class="hover-effect-yellow-bright btn outline">
+                <i class="hover-effect-yellow-bright fa-solid fa-xmark close-button"></i>
+                <span>Thoát</span>
+            </button>
+        </div>
+    </div>
+</app-modal>
