--- a/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.css
@@ -277,11 +277,35 @@
     transition: 0.3s ease-in-out;
     cursor: pointer;
 }
+
 .right-side__inside__body__gallery__exhibition__item__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: var(--border-radius-1);
+    position: relative;
+    z-index: 1;
+}
+
+.right-side__inside__body__gallery__exhibition__preview {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 45px;
+    background-color: var(--level1-color);
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.21s ease-in-out;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.right-side__inside__body__gallery__exhibition__item:hover .right-side__inside__body__gallery__exhibition__preview {
+    opacity: 1;
+    pointer-events: all;
 }
 
 .right-side__inside__body__gallery__scroll-to-top {
@@ -368,6 +392,66 @@
     font-size: var(--fs-less-1);
     color: var(--secondary-color);
     padding: 3px 12px;
+}
+
+/* PREVIEW MODAL */
+.preview-drawing-container {
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 1;
+}
+
+.preview-drawing-container__title {
+    pointer-events: all;
+    font-size: var(--fs-larger-5);
+    font-weight: 300;
+    opacity: 0.81;
+    text-wrap: wrap;
+    font-family: var(--font-secondary);
+    height: 12%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: text;
+}
+
+.preview-drawing-container__img-group__img {
+    width: 100%;
+    height: auto;
+    pointer-events: all;
+}
+
+.preview-drawing-container__button-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    height: 12%;
+}
+
+.preview-drawing-container__button-group button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 9px;
+    background-color: var(--level3-color);
+    font-size: var(--fs-less-1);
+    border-radius: var(--border-radius-2);
+    pointer-events: all;
+}
+
+.preview-drawing-container__button-group button * {
+    margin-top: 1.8px;
+}
+
+.preview-drawing-container__button-group button i {
+    margin-right: 0;
 }
 
 /* Extra Large screens and TV */
