--- a/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.css
@@ -418,6 +418,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-user-select: text;
     user-select: text;
 }
 
