--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.css
@@ -47,7 +47,7 @@
 
 .wrapper__accordion i {
     transition: 0.21s ease-in-out;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid transparent;
     border-radius: var(--border-radius-1);
     padding: 6px;
     position: absolute;
@@ -103,4 +103,9 @@
     border-radius: 27px;
     font-size: var(--fs-less-1);
     gap: 6px;
+    transition: 0.21s ease-in-out;
+}
+
+.wrapper__panel__wrapper__tag-filter.activated {
+    color: var(--secondary-color);
 }
