--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
@@ -1,20 +1,36 @@
 <div class="wrapper">
-    <div *ngFor="let x of categoryListPageSubjectLevel2" class="wrapper__accordion-group">
-        <div class="wrapper__accordion" id="level2{{x.id}}">
-            <span class="hover-effect-yellow-bright">{{ x.name }}</span>
+    <div *ngFor="let x of categorySubjectList" class="wrapper__accordion-group">
+        <div class="wrapper__accordion" id="level2{{x.level2Id}}">
+            <span class="hover-effect-yellow-bright">{{ x.level2Name }}</span>
             <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
         </div>
         <div class="wrapper__panel">
             <div class="wrapper__panel__wrapper">
-                <div [ngClass]="{ 'activated': isCategoryTagSelected({id: 0, name: 'Tất cả' + ' - ' + x.name}) }"
-                (click)="toggleToFilter($event ,{ id: 0, name: 'Tất cả' + ' - ' + x.name })" class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
+                <div [ngClass]="{ 'activated': isCategoryTagSelected({id: 0, name: 'Tất cả' + ' - ' + x.level2Name}) }"
+                    (click)="toggleToFilter($event ,{ id: 0, name: 'Tất cả' + ' - ' + x.level2Name })"
+                    class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
                     <span class="wrapper__panel__wrapper__tag-filter__content">Tất cả</span>
                 </div>
-                <div *ngFor="let y of categoryListPageSubjectLevel3" [ngClass]="{ 'activated': isCategoryTagSelected({id: y.id, name: y.name}) }" 
-                (click)="toggleToFilter($event ,{ id: y.id, name: y.name })" 
-                class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                    <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
+
+                <div *ngFor="let y of x.level3List">
+                    <div *ngIf="y.id === 1; else otherCondition">
+                        <!-- Điều kiện đặc biệt khi y.id bằng 1 -->
+                        <div [ngClass]="{ 'activated': isCategoryTagSelected({id: y.id, name: y.name + ' - ' + x.level2Name}) }"
+                            (click)="toggleToFilter($event, {id: y.id, name: y.name + ' - ' + x.level2Name})"
+                            class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
+                            <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
+                        </div>
+                    </div>
+                    <ng-template #otherCondition>
+                        <!-- Điều kiện khác -->
+                        <div [ngClass]="{ 'activated': isCategoryTagSelected({id: y.id, name: y.name}) }"
+                            (click)="toggleToFilter($event, { id: y.id, name: y.name })"
+                            class="wrapper__panel__wrapper__tag-filter">
+                            <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
+                        </div>
+                    </ng-template>
                 </div>
+
             </div>
         </div>
     </div>
